# graphics_app

./: CMakeLists.txt  main.cpp
packaging/: CMakeLists.txt  cmake_install.cmake
packaging/Manifests/: app.rc
